- Downgrade Java toolchain from 21 to 17 for broader compatibility, updating build scripts, `README.md`, and examples. - Refactor method event handling for `MethodEventExtractor`, `GenerateRulesUseCase`, and tests:   - Replace `getFirst()` and `getLast()` usage with index-based access for improved clarity and consistency. - Add `@SuppressWarnings("unused")` for cleaner API methods in `RtTrace`. - Optimize string appending in `RtTrace` by removing redundant `toString()` call. - Fix thread ID retrieval in correlation ID generation logic to use `System.identityHashCode`. - Ensure proper shutdown of `ExecutorService` in `JavaParallelFileScanExecutor` and related tests. - Add Gradle Foojay resolver plugin to `settings.gradle.kts` for streamlined Java toolchain provisioning.